# ros-project-generator

./: Cargo.toml  README.md
examples/: config.yaml
src/: main.rs
templates/: CMakeLists.txt  Cargo.txt  package.txt
